namespace.yml
kind: Namespace  
apiVersion: v1  
metadata:  
 name: staging  
 labels:  
   name: staging
