deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name     : falcon-project-deployment
  namespace: staging
  labels:
    app : falcon-k8s-application 
spec:
  selector:
    matchLabels:
      project: falcon-project
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        project: falcon-project
    spec:
      containers:
        - name : falcon-project-webapp
          image: gcr.io/PROJECT_ID/IMAGE:TAG
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:                                 
              cpu: 200m
              memory: 128Mi
