ingress-hosts.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: falcon-ingress
  namespace: staging
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "falcon-cluster-ip"
    cert-manager.io/issuer: "letsencrypt"
    cert-manager.io/issue-temporary-certificate: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
  - hosts:
    - "falcon.tonguru.com"
    secretName: tls-secret
  rules:
  - host: falcon.tonguru.com
    http:
      paths:
      - backend:
          serviceName: falcon-webapp-service
          servicePort: 80
  
  - host: tomcat.falcon.tonguru.com
    http:
      paths:
      - backend:
          serviceName: tomcat
          servicePort: 8080
    
  - host: phpmyadmin.falcon.tonguru.com
    http:
      paths:
      - backend:
          serviceName: phpmyadmin
          servicePort: 80
